--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dailyTemperature.js",
   "scripts": {
-    "deploy": "gh-pages -d forecasr-serbia"
+    "deploy": "gh-pages -d forecast-serbia"
   },
   "keywords": [],
   "author": "",
