--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
   "name": "forecast-serbia",
   "version": "1.0.0",
-  "description": "",
-  "main": "dailyTemperature.js",
   "scripts": {
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://bokijano.github.io/forecast-serbia",
+  "homepage": "https://bokijano.github.io/forecast",
   "dependencies": {
     "gh-pages": "^2.1.1"
   }
