--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://bokijano.github.io/forecast-serbia",
+  "homepage": "https://bokijano.github.io/forecast",
   "dependencies": {
     "gh-pages": "^2.1.1"
   }
